increase version for new tag to publish pypi

--- a/packagedoc/additional_docs/History.tex
+++ b/packagedoc/additional_docs/History.tex
@@ -15,4 +15,7 @@
 \begin{packagehistory}
     \historyversiondate{0.1.0}{22.04.2024}
     \historychange{Initial version}
+    
+    \historyversiondate{0.1.1}{15.05.2024}
+    \historychange{Fixed issues of workflow to publish package to pypi}
 \end{packagehistory}
