add linux dependencies packages

--- a/packagedoc/additional_docs/History.tex
+++ b/packagedoc/additional_docs/History.tex
@@ -18,4 +18,7 @@
     
     \historyversiondate{0.1.1}{15.05.2024}
     \historychange{Fixed issues of workflow to publish package to pypi}
+
+    \historyversiondate{0.1.2}{17.05.2024}
+    \historychange{Added requirements\_linux.sh file, which helps to install Linux dependency packages}
 \end{packagehistory}
