correct link to package on pypi

--- a/packagedoc/additional_docs/History.tex
+++ b/packagedoc/additional_docs/History.tex
@@ -21,4 +21,7 @@
 
     \historyversiondate{0.1.2}{17.05.2024}
     \historychange{Added requirements\_linux.sh file, which helps to install Linux dependency packages}
+
+    \historyversiondate{0.1.3}{17.05.2024}
+    \historychange{Corrected link to package on pypi}
 \end{packagehistory}
